--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,9 @@ default: &default
 development:
   <<: *default
   database: factorialHR_development
+  username: luly
+  password: 'pass'
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
